<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <!-- 対象期間を入力する領域 -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/target_period" />

        <EditText
            android:id="@+id/etStart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="number"
            android:text="@string/from"
            android:textSize="14sp"
            android:autofillHints="no"
            tools:ignore="LabelFor" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:text="@string/range">

            <requestFocus />
        </TextView>

        <EditText
            android:id="@+id/etEnd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="number"
            android:text="@string/to"
            android:textSize="14sp"
            android:importantForAutofill="no"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/btSearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.3"
            android:text="@string/display" />

        <Button
            android:id="@+id/btLink"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.3"
            android:text="@string/page_transition" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ffa500"
            android:text="@string/withdrawal_details"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#ffbb00"
            android:gravity="center"
            android:text="@string/date" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="#ffbb00"
            android:gravity="center"
            android:text="@string/contents" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#ffbb00"
            android:gravity="center"
            android:text="@string/amount" />
    </LinearLayout>

    <!-- 収支の表示領域 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ListView
            android:id="@+id/lvHistoricalData"
            android:layout_width="match_parent"
            android:layout_height="300dp">
     </ListView>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#ffa500"
         android:text="@string/budget"
         android:textColor="#ffffff"
         android:textSize="18sp" />

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="30dp"
         android:orientation="horizontal">

         <TextView
             android:layout_width="0dp"
             android:layout_height="30dp"
             android:layout_weight="1"
             android:paddingStart="10dp"
             android:paddingEnd="10dp"
             android:text="@string/income"
             android:textSize="16sp" />

         <TextView
             android:id="@+id/tvIncome"
             android:layout_width="0dp"
             android:layout_height="30dp"
             android:layout_weight="1"
             android:gravity="end"
             android:paddingStart="10dp"
             android:paddingEnd="10dp"
             android:textSize="16sp" />
     </LinearLayout>

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="30sp"
         android:orientation="horizontal">

         <TextView
             android:layout_width="0dp"
             android:layout_height="30dp"
             android:layout_weight="1"
             android:paddingStart="10dp"
             android:paddingEnd="10dp"
             android:text="@string/spending"
             android:textSize="16sp" />

         <TextView
             android:id="@+id/tvExpense"
             android:layout_width="0dp"
             android:layout_height="30dp"
             android:layout_weight="1"
             android:gravity="end"
             android:paddingStart="10dp"
             android:paddingEnd="10dp"
             android:textSize="16sp" />
     </LinearLayout>

 </LinearLayout>

 <!-- 最大支出の表示領域 -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffa500"
        android:text="@string/max_spending"
        android:textColor="#ffffff"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#ffbb00"
            android:gravity="center"
            android:text="@string/max_date" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#ffbb00"
            android:gravity="center"
            android:text="@string/max_dealer" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#ffbb00"
            android:gravity="center"
            android:text="@string/max_contents" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#ffbb00"
            android:gravity="center"
            android:text="@string/max_purpose" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#ffbb00"
            android:gravity="center"
            android:text="@string/max_amount" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvMaxTransDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center" />

        <TextView
            android:id="@+id/tvMaxSupplier"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center" />

        <TextView
            android:id="@+id/tvMaxContent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center" />

        <TextView
            android:id="@+id/tvMaxUse"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center" />

        <TextView
            android:id="@+id/tvMaxAmount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center" />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|bottom">
        <!-- Auto layout, variables, and unit scale are not yet supported -->

        <!-- Auto layout, variables, and unit scale are not yet supported -->
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#507A2F"
            android:text="tab2" />
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#507A2F"
            android:text="ホーム" />
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="#507A2F"
            android:layout_weight="1"
            android:text="tab3" />
    </LinearLayout>

</LinearLayout>



